--- a/client/src/components/assistant/assistant.css
+++ b/client/src/components/assistant/assistant.css
@@ -9,6 +9,8 @@
 }
 
 .input_assistant {
+  position: relative;
+  z-index: 2;
   border-radius: 24px;
   border: none;
   background: #f1f3f4;
@@ -31,6 +33,7 @@
 
 .input_assistant_icon {
   position: relative;
+  z-index: 3;
   top: 12px;
   left: 34px;
 }
@@ -39,16 +42,18 @@
   display: flex;
   width: 43vw;
   position: relative;
+  top: -45px;
   left: -7vw;
   margin-top: 4px;
   border-radius: 24px;
   box-shadow: 0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%), 0 1px 5px 0 rgb(0 0 0 / 12%);
   background-color: white;
   padding: 24px;
-  padding-top: 20px;
+  padding-top: 65px;
   padding-bottom: 20px;
   font-size: 16px;
   z-index: 1;
+  min-height: 200px;
 }
 
 .answers_panel_thinking {
