--- a/client/src/views/experiment/experiment.css
+++ b/client/src/views/experiment/experiment.css
@@ -41,22 +41,18 @@
 }
 
 .experiment_menu_panel_item {
-  /* width: 160px; */
   padding-top: 4px;
   display: inline-flex;
   position: relative;
   text-align: center;
-  /* margin-left: 12px; */
-  /* margin-right: 12px; */
-  /* text-align: center; */
   cursor: pointer;
   background-color: transparent;
   border-radius: 24px 24px 24px 24px;
   font-size: 14px;
   text-align: left;
   height: 30px;
-  margin-left: 4px;
-  margin-right: 4px;
+  margin-left: 14px;
+  margin-right: 14px;
   margin-bottom: 4px;
 }
 
@@ -78,7 +74,7 @@
 
 .experiment_menu_panel_item_text {
   position: relative;
-  /* top: 3px; */
+  top: 1px;
   margin-left: 4px;
   margin-right: 18px;
 }
@@ -87,6 +83,10 @@
   width: 100%;
   flex-grow: 1;
   display: flex;
+}
+
+.experiment_detail_table {
+  width: 100%;
 }
 
 .regulatory_panel {
@@ -150,4 +150,9 @@
   line-height: 1.5;
   font-weight: 400;
   padding: 35px; */
+}
+
+.regulatory_docs_editor iframe {
+  width: 100%;
+  height: 100%;
 }
