--- a/client/src/main.css
+++ b/client/src/main.css
@@ -15,6 +15,7 @@
   --secondary-color: rgb(33,
       150,
       243, 0);
+  --primary-text-color: rgb(95, 99, 104);
   --primary-light-color: #d3e3fd;
   --secondary-light-color: #f1f3f4;
   --primary-background-color: white;
