--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -10,7 +10,8 @@
   border-bottom: solid 1px rgba(242, 242, 242, 1);
 
   font-weight: 550;
-  color: #8f8f8f;
+  /* color: #8f8f8f; */
+  color: var(--primary-text-color);
   font-size: 18px;
 }
 
