--- a/client/src/components/input-select/input-select.css
+++ b/client/src/components/input-select/input-select.css
@@ -4,7 +4,8 @@
   position: relative;
   display: flex;
   align-items: center;
-  margin-top: 14px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 /* select starting stylings ------------------------------*/
@@ -15,16 +16,16 @@
     Arial,
     sans-serif;
   padding: var(--padding);
-  border: 2px solid gray;
+  /* border: 2px solid gray;
   outline: none;
-  border-radius: 6px;
+  border-radius: 6px; */
   /* background-color: #f1f3f4; */
   background-color: white;
   width: 400px;
 }
 
 .input_select_valid {
-  border: 2px solid var(--primary-color);
+  /* border: 2px solid var(--primary-color); */
 }
 
 .input_select_text {
@@ -32,11 +33,11 @@
   font-family: inherit;
   background-color: transparent;
   width: 100%;
-  padding: 10px 10px 10px 0;
+  padding: 10px 10px 10px 4px;
   font-size: 14px;
   border-radius: 0;
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+  /* border-bottom: 1px solid rgba(0, 0, 0, 0.12); */
 }
 
 /* Remove focus */
@@ -93,7 +94,7 @@
 .input_select_bar {
   position: relative;
   display: block;
-  width: 100%;
+  width: 90%;
 }
 
 .input_select_bar:before,
