updated email login

--- a/client/src/components/input-field/input-field.css
+++ b/client/src/components/input-field/input-field.css
@@ -5,7 +5,8 @@
   display: flex;
   align-items: center;
   margin-top: 14px;
-  width: 404px;
+  /* width: 404px; */
+  width: 100%;
 }
 
 .input_field {
