--- a/client/src/views/sign-in-password/sign-in-password.css
+++ b/client/src/views/sign-in-password/sign-in-password.css
@@ -10,10 +10,7 @@
 }
 
 .signin_password_panel {
-  max-width: 550px;
-  min-width: 350px;
   height: 100%;
-  margin: 0;
   position: fixed;
   padding-top: 20px;
   top: 50%;
@@ -28,11 +25,15 @@
   border-radius: 4px;
   background-color: white;
   text-align: center;
-  font-weight: 600;
+  width: 350px;
+}
+
+.signin_password_title {
+  font-size: 24px;
 }
 
 .signin_password_form {
-  margin-top: 50px;
+  margin-top: 20px;
   margin-left: 24px;
   margin-right: 24px;
   display: flex;
