--- a/client/src/views/register-password/register-password.css
+++ b/client/src/views/register-password/register-password.css
@@ -1,4 +1,4 @@
-.signin_password_background {
+.register_password_background {
   display: flex;
   justify-content: center;
   width: 100vw;
@@ -9,11 +9,10 @@
   top: 0px;
 }
 
-.signin_password_panel {
+.register_password_panel {
   max-width: 550px;
   min-width: 350px;
   height: 100%;
-  margin: 0;
   position: fixed;
   padding-top: 20px;
   top: 50%;
@@ -28,11 +27,14 @@
   border-radius: 4px;
   background-color: white;
   text-align: center;
-  font-weight: 600;
 }
 
-.signin_password_form {
-  margin-top: 50px;
+.register_password_title {
+  font-size: 24px;
+}
+
+.register_password_form {
+  margin-top: 20px;
   margin-left: 24px;
   margin-right: 24px;
   display: flex;
