--- a/client/src/views/sign-in/sign-in.css
+++ b/client/src/views/sign-in/sign-in.css
@@ -28,7 +28,8 @@
   border-radius: 4px;
   background-color: white;
   text-align: center;
-  font-weight: 600;
+  font-size: larger;
+  font-size: 24px;
 }
 
 .providers {
