--- a/client/src/components/input-field/input-field.css
+++ b/client/src/components/input-field/input-field.css
@@ -45,3 +45,62 @@
   font-size: 14px;
   color: var(--primary-color);
 }
+
+.input_field_help {
+  position: fixed;
+  z-index: 1;
+  /* top: 44px;
+  left: 10px; */
+  width: 225px;
+  border-radius: 3px;
+  background: rgb(255, 255, 255);
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 10px 0px;
+  border: 1px solid rgb(242, 242, 242);
+  border-radius: 4px;
+  width: 325px;
+  pointer-events: none;
+}
+
+.input_field_help_panel {
+  background-color: white;
+  position: relative;
+  top: -15px;
+  z-index: 3;
+  padding: 8px;
+}
+
+.input_field_help_panel_arrow {
+  position: relative;
+  top: -12px;
+  left: -8px;
+  z-index: 1;
+  border: 1px solid rgb(242, 242, 242);
+  box-shadow: rgba(0, 0, 0, 0.15) -1px -1px 1px -1px;
+  transform: rotate(45deg) translate(16px, 16px);
+  background: rgb(255, 255, 255);
+  height: 14px;
+  width: 14px;
+  display: block;
+  content: "";
+  pointer-events: none;
+}
+
+.input_field_help_button {
+  position: absolute;
+  right: 54px;
+  bottom: 8px;
+  width: 40px;
+  height: 40px;
+  background-color: lightgrey;
+  border: 1px;
+}
+
+.input_field_gen_button {
+  position: absolute;
+  right: 8px;
+  bottom: 8px;
+  width: 40px;
+  height: 40px;
+  background-color: lightgrey;
+  border: 1px;
+}
