--- a/client/src/views/workbenches/workbenches.css
+++ b/client/src/views/workbenches/workbenches.css
@@ -9,46 +9,9 @@
   cursor: pointer;
 }
 
-.styled-table {
-  border-collapse: collapse;
-  margin: 25px 0;
-  font-size: 0.9em;
-  font-family: sans-serif;
-  min-width: 400px;
-  /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); */
-  width: 100%;
-}
-
-.styled-table thead tr {
-  background-color: #4e4e4e00;
-  color: #606060;
-  text-align: left;
-  border-bottom: 2px solid #6a6a6a;
-}
-
-.styled-table th,
-.styled-table td {
-  padding: 12px 15px;
-}
-
-.styled-table tbody tr {
-  border-bottom: 1px solid #dddddd;
-}
-
-.styled-table tbody tr:hover {
-  background-color: var(--secondary-light-color);
+.workbench_start_icon {
+  width: 32px;
+  height: 32px;
   cursor: pointer;
+  margin-right: 12px;
 }
-
-/* .styled-table tbody tr:nth-of-type(even) {
-  background-color: #f3f3f3;
-} */
-
-.styled-table tbody tr:last-of-type {
-  /* border-bottom: 2px solid #6a6a6a; */
-}
-
-/* .styled-table tbody tr.active-row {
-  font-weight: bold;
-  color: #009879;
-} */
