--- a/client/src/components/input-button/input-button.css
+++ b/client/src/components/input-button/input-button.css
@@ -22,7 +22,7 @@
   outline: none;
   cursor: pointer;
   transition: box-shadow 0.2s;
-  margin-left: 14px;
+  margin-right: 14px;
   margin-top: 8px;
 }
 
