--- a/client/src/views/project-new/project-new.css
+++ b/client/src/views/project-new/project-new.css
@@ -82,3 +82,11 @@
   transition: all 0.2s ease-in;
   pointer-events: none;
 }
+
+.project_new_duet_thinking_icon {
+  position: absolute;
+  width: 36px;
+  /* top: 20px; */
+  left: 390px;
+  z-index: 2;
+}
