--- a/client/src/components/input-field/input-field.css
+++ b/client/src/components/input-field/input-field.css
@@ -24,6 +24,11 @@
   width: 100%;
 }
 
+.input_field_box {
+  width: 100%;
+
+}
+
 .input_field_placeholder {
   position: absolute;
   top: 6px;
@@ -33,7 +38,7 @@
   left: var(--padding);
   padding: 0 4px;
   transition: all 0.2s ease-in;
-  pointer-events: none;
+  /* pointer-events: none; */
 }
 
 .input_field:is(:focus, :valid) {
@@ -48,10 +53,6 @@
 
 .input_field_help {
   position: fixed;
-  z-index: 1;
-  /* top: 44px;
-  left: 10px; */
-  width: 225px;
   border-radius: 3px;
   background: rgb(255, 255, 255);
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 10px 0px;
@@ -103,4 +104,96 @@
   height: 40px;
   background-color: lightgrey;
   border: 1px;
+}
+
+.input_field_duet {
+  position: fixed;
+  z-index: 1;
+  /* width: 134px; */
+  height: 44px;
+  border-radius: 24px;
+  background: rgb(255, 255, 255);
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 10px 0px;
+  border: 1px solid rgb(242, 242, 242);
+  /* pointer-events:none; */
+}
+
+.input_field_duet:hover {
+  cursor: pointer;
+}
+
+.input_field_duet_icon {
+  position: relative;
+  top: 8px;
+  left: 6px;
+  margin-right: 4px;
+  width: 26px;
+}
+
+.input_field_duet_text {
+  margin-right: 10px;
+}
+
+.input_field_duet_popup {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  top: 0px;
+  left: 0px;
+  background-color: #6c6c6cb3;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.input_field_duet_panel {
+  position: absolute;
+  top: 10%;
+  /* bottom: 20%; */
+  width: 90%;
+  max-width: 704px;
+  background: white;
+  margin: auto;
+  border: 1px #eee solid;
+  border-radius: 24px;
+  font-size: 14px;
+  padding: 28px;
+  overflow-y: auto;
+}
+
+.input_field_duet_insert_button {
+  /* position: absolute;
+  bottom: 160px;
+  right: 40px; */
+}
+
+.input_field_duet_input {
+  font-family: Google Sans,
+    Roboto,
+    Helvetica,
+    Arial,
+    sans-serif;
+  padding: var(--padding);
+  /* position: absolute; */
+  left: 30px;
+  top: 74px;
+  min-height: 18vh;
+  right: 14px;
+  border: 0px;
+  outline: none;
+  border-radius: 6px;
+  font-size: 14px;
+  /* background-color: #f1f3f4; */
+  background-color: white;
+  width: 100%;
+}
+
+.input_field_duet_back {
+  color: #999;
+  position: relative;
+  top: 1px;
+  margin-left: 8px;
+  font-size: 18px;
+  cursor: pointer;
 }
