--- a/client/src/main.css
+++ b/client/src/main.css
@@ -74,7 +74,7 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  /* border-radius: 8px;
   padding: 0.4em 0.8em;
   font-size: 14px;
   font-weight: 600;
@@ -83,7 +83,32 @@ button {
   color: #646464;
   cursor: pointer;
   transition: border-color 0.25s;
-  border: 4px solid #959595;
+  border: 4px solid #959595; */
+  position: relative;
+  display: inline-block;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 4px;
+  padding: 0 16px;
+  min-width: 64px;
+  height: 36px;
+  vertical-align: middle;
+  text-align: center;
+  text-overflow: ellipsis;
+  text-transform: uppercase;
+  color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
+  background-color: var(--primary-color);
+  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  font-family: var(--pure-material-font, "Roboto", "Segoe UI", BlinkMacSystemFont, system-ui, -apple-system);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 36px;
+  overflow: hidden;
+  outline: none;
+  cursor: pointer;
+  transition: box-shadow 0.2s;
+  margin-right: 14px;
+  margin-top: 8px;
 }
 
 button:hover {
@@ -194,3 +219,35 @@ button:focus-visible {
   font-weight: bold;
   color: #009879;
 } */
+
+.popup_dialog {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  top: 0px;
+  left: 0px;
+  background-color: #6c6c6cb3;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.popup_dialog_content {
+  position: absolute;
+  top: 40px;
+  bottom: 40px;
+  width: 90%;
+  max-width: 704px;
+  background: white;
+  margin: auto;
+  border: 1px #eee solid;
+  border-radius: 24px;
+  font-size: 14px;
+  padding: 28px;
+  overflow-y: auto;
+}
+
+.popup_dialog_content h1 {
+  font-size: 24px;
+}
